--- a/_includes/history.html
+++ b/_includes/history.html
@@ -32,7 +32,7 @@
           {{ role.achivements | markdownify}}
           {% endif %}
           {% if role.technologies %}
-          <h4 class="resume-timeline-item-desc-heading font-weight-bold">Technologies used:</h4>
+          <h4 class="resume-timeline-item-desc-heading font-weight-bold">Aptitudes y Herramientas:</h4>
           <ul class="list-inline">
           {% for tech in role.technologies %}
             <li class="list-inline-item"><span class="badge badge-primary badge-pill">{{ tech.name }}</span></li>
