--- a/_includes/education.html
+++ b/_includes/education.html
@@ -10,7 +10,7 @@
         <div class="resume-degree-org">{{ grad.name }}</div>
         #<div class="resume-degree-time">{{ grad.time }}
         #  <span style="float:right">GPA: {{ grad.gpa }}</span>
-        </div>
+        #</div>
       </li>
       {% endfor %}
     </ul>
