--- a/_includes/education.html
+++ b/_includes/education.html
@@ -8,6 +8,9 @@
       <li class="mb-2">
         <div class="resume-degree font-weight-bold">{{ grad.degree }}</div>
         <div class="resume-degree-org">{{ grad.name }}</div>
+        <div class="resume-degree-time">{{ grad.time }}
+          <span style="float:right">GPA: {{ grad.gpa }}</span>
+        </div>
       </li>
       {% endfor %}
     </ul>
