--- a/_includes/education.html
+++ b/_includes/education.html
@@ -9,7 +9,7 @@
         <div class="resume-degree font-weight-bold">{{ grad.degree }}</div>
         <div class="resume-degree-org">{{ grad.name }}</div>
         <div class="resume-degree-time">{{ grad.time }}
-          <span style="float:right">GPA: {{ grad.gpa }}</span>
+          <span style="float:right">Duración: {{ grad.gpa }}</span>
         </div>
       </li>
       {% endfor %}
