--- a/_includes/languages.html
+++ b/_includes/languages.html
@@ -1,7 +1,7 @@
 {% assign languages = site.data.data.languages %}
 {% if languages %}
 <section class="resume-section language-section mb-5">
-  <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Language</h2>
+  <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Idioma</h2>
   <div class="resume-section-content">
     <ul class="list-unstyled resume-lang-list">
     {% for language in languages %}
