--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -6,7 +6,7 @@
     <div class="resume-skill-item">
         <h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
         <ul class="list-unstyled">
-        {% for skill in skills.frontend %}
+        {% for skill in skills.Comunicación %}
             <li class="mb-2">
                 <div class="resume-skill-name">{{ skill.name }}</div>
                 <div class="progress resume-progress">
@@ -22,7 +22,7 @@
     <div class="resume-skill-item">
         <h4 class="resume-skills-cat font-weight-bold">Backend</h4>
         <ul class="list-unstyled">
-        {% for skill in skills.backend %}
+        {% for skill in skills.Especializaciones %}
             <li class="mb-2">
                 <div class="resume-skill-name">{{ skill.name }}</div>
                 <div class="progress resume-progress">
