--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,6 +1,6 @@
 {% assign skills = site.data.data.skills %}
 <section class="resume-section skills-section mb-5">
-  <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Skills &amp; Tools</h2>
+  <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Aptitudes</h2>
   <div class="resume-section-content">
     {% if skills.frontend %}
     <div class="resume-skill-item">
