--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -18,9 +18,9 @@
     </div><!--//resume-skill-item-->
     {% endif %}
 
-    {% if skills.backend %}
+    {% if skills.Especializaciones %}
     <div class="resume-skill-item">
-        <h4 class="resume-skills-cat font-weight-bold">Backend</h4>
+        <h4 class="resume-skills-cat font-weight-bold">Especializaciones</h4>
         <ul class="list-unstyled">
         {% for skill in skills.Especializaciones %}
             <li class="mb-2">
