--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,9 +2,9 @@
 <section class="resume-section skills-section mb-5">
   <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Aptitudes</h2>
   <div class="resume-section-content">
-    {% if skills.frontend %}
+    {% if skills.Comunicación %}
     <div class="resume-skill-item">
-        <h4 class="resume-skills-cat font-weight-bold">Frontend</h4>
+        <h4 class="resume-skills-cat font-weight-bold">Comunicación</h4>
         <ul class="list-unstyled">
         {% for skill in skills.Comunicación %}
             <li class="mb-2">
@@ -34,11 +34,27 @@
     </div><!--//resume-skill-item-->
     {% endif %}
 
-    {% if skills.other %}
+        {% if skills.Tecnologías %}
     <div class="resume-skill-item">
-        <h4 class="resume-skills-cat font-weight-bold">Other</h4>
+        <h4 class="resume-skills-cat font-weight-bold">Tecnologías</h4>
+        <ul class="list-unstyled">
+        {% for skill in skills.Tecnologías %}
+            <li class="mb-2">
+                <div class="resume-skill-name">{{ skill.name }}</div>
+                <div class="progress resume-progress">
+                    <div class="progress-bar theme-progress-bar-dark" role="progressbar" style="width: {{ skill.percentage }}%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                </div>
+            </li>
+        {% endfor %}
+        </ul>
+    </div><!--//resume-skill-item-->
+    {% endif %}
+
+    {% if skills.Otras %}
+    <div class="resume-skill-item">
+        <h4 class="resume-skills-cat font-weight-bold">Otras</h4>
         <ul class="list-inline">
-            {% for skill in skills.other %}
+            {% for skill in skills.Otras %}
             <li class="list-inline-item"><span class="badge badge-light">{{ skill.name }}</span></li>
             {% endfor %}
         </ul>
