--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -2,11 +2,11 @@
 <section class="resume-section skills-section mb-5">
   <h2 class="resume-section-title text-uppercase font-weight-bold pb-3 mb-3">Aptitudes</h2>
   <div class="resume-section-content">
-    {% if skills.Comunicación %}
+    {% if skills.Comunicacion %}
     <div class="resume-skill-item">
         <h4 class="resume-skills-cat font-weight-bold">Comunicación</h4>
         <ul class="list-unstyled">
-        {% for skill in skills.Comunicación %}
+        {% for skill in skills.Comunicacion %}
             <li class="mb-2">
                 <div class="resume-skill-name">{{ skill.name }}</div>
                 <div class="progress resume-progress">
@@ -34,11 +34,11 @@
     </div><!--//resume-skill-item-->
     {% endif %}
 
-        {% if skills.Tecnologías %}
+        {% if skills.Tecnologias %}
     <div class="resume-skill-item">
         <h4 class="resume-skills-cat font-weight-bold">Tecnologías</h4>
         <ul class="list-unstyled">
-        {% for skill in skills.Tecnologías %}
+        {% for skill in skills.Tecnologias %}
             <li class="mb-2">
                 <div class="resume-skill-name">{{ skill.name }}</div>
                 <div class="progress resume-progress">
