--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -4,7 +4,7 @@
   <div class="resume-section-content">
    {% if skills.Comunicacion %}
     <div class="resume-skill-item">
-        <h4 class="resume-skills-cat font-weight-bold">Comunicación</h4>
+        <h4 class="resume-skills-cat font-weight-bold">Comunicación:</h4>
         <ul class="list-unstyled">
         {% for skill in skills.Comunicacion %}
             <li class="mb-2">
@@ -20,7 +20,7 @@
 
     {% if skills.Especializaciones %}
     <div class="resume-skill-item">
-        <h4 class="resume-skills-cat font-weight-bold">Especializaciones</h4>
+        <h4 class="resume-skills-cat font-weight-bold">Especializaciones:</h4>
         <ul class="list-unstyled">
         {% for skill in skills.Especializaciones %}
             <li class="mb-2">
@@ -36,7 +36,7 @@
 
         {% if skills.Tecnologias %}
     <div class="resume-skill-item">
-        <h4 class="resume-skills-cat font-weight-bold">Tecnologías</h4>
+        <h4 class="resume-skills-cat font-weight-bold">Tecnologías:</h4>
         <ul class="list-unstyled">
         {% for skill in skills.Tecnologias %}
             <li class="mb-2">
