--- a/_includes/history.html
+++ b/_includes/history.html
@@ -27,9 +27,9 @@
           {% else %}
             {{ role.description | markdownify }}
           {% endif %}
-          {% if role.achivements %}
-          <h4 class="resume-timeline-item-desc-heading font-weight-bold">Achievements:</h4>
-          {{ role.achivements | markdownify}}
+          {% if role.Produccion %}
+          <h4 class="resume-timeline-item-desc-heading font-weight-bold">Producción:</h4>
+          {{ role.Produccion | markdownify}}
           {% endif %}
           {% if role.technologies %}
           <h4 class="resume-timeline-item-desc-heading font-weight-bold">Aptitudes y Herramientas:</h4>
